Template update + css + post