@@ -7,6 +7,7 @@ import ru.chsergeyg.terrapia.server.Init;
 import java.net.InetSocketAddress;
 import java.security.MessageDigest;
 import java.security.NoSuchAlgorithmException;
+import java.util.Arrays;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
@@ -19,35 +20,21 @@ public class HTTPDRunnable implements Runnable {
     public void run() {
         Init.getLogger(getClass().getName()).info("HTTPDRunnable started");
         credentials = new HashMap<>();
-        credentials.put("root", getHash("password"));
-        credentials.put("groot", getHash("groot im am"));
+        credentials.put("root", "password");
+        credentials.put("groot", "groot im am");
         try {
             final HttpServer httpServer = HttpServer.create(new InetSocketAddress(Init.HTTPD_PORT), 0);
-            List.of(HandlerEnum.values()).forEach((e) -> httpServer.createContext(e.getUrl(), e.getHandler()));
+            Arrays.asList(HandlerEnum.values()).forEach((e) -> httpServer.createContext(e.getUrl(), e.getHandler()));
             httpServer.setExecutor(null);
             httpServer.start();
         } catch (Exception e) {
-            Init.getLogger(getClass().getName()).warning("NPE on context creation procedure");
+            Init.getLogger(getClass().getName()).warning(e.getMessage());
         }
     }
 
-    private String getHash(String value) {
-        byte[] hash = new byte[0];
-        try {
-            hash = MessageDigest.getInstance("SHA-256").digest(value.getBytes());
-        } catch (NoSuchAlgorithmException e) {
-            Init.getLogger(getClass().getName()).warning(e.toString());
-        }
-        StringBuilder stringBuilder = new StringBuilder();
-        for (byte b : hash) {
-            stringBuilder.append(Integer.toHexString((b & 0xFF) | 0x100).substring(1, 3));
-        }
-        return stringBuilder.toString();
-    }
-
-    public static boolean isUserValid(String login, String shaPasswd) {
+    public static boolean isUserValid(String login, String passwd) {
         if (credentials.size() > 0 && credentials.containsKey(login))
-            return credentials.get(login).equals(shaPasswd);
+            return credentials.get(login).equals(passwd);
         return false;
     }
 }
